# MiddleEndPreso

./: .gitignore  README.md
back/: .gitignore  Morphologue.MiddleEndPreso.csproj  Morphologue.MiddleEndPreso.sln  Morphologue.MiddleEndPreso.sln.DotSettings  Program.cs
back/Adapters/: IAdapter.cs
back/Models/: MortgageCalcParams.cs  MortgageCalcResult.cs
back/Morphologue.MiddleEndPreso/: ApiController.cs  Morphologue.MiddleEndPreso.csproj
back/Morphologue.MiddleEndPreso/Adapters/: IAdapter.cs  RustAdapter.cs
back/Properties/: launchSettings.json
back/mortgage-calc-harness/: Cargo.toml
back/mortgage-calc-harness/src/: main.rs
front/: package-lock.json  package.json
front/public/: index.html
front/src/: .prettierrc  App.tsx  MortgageForm.tsx  ResultTable.tsx  SpinningOverlay.tsx  index.tsx  types.ts
front/src/adapters/: rust.ts  types.ts
front/src/components/: App.tsx  MortgageForm.tsx  ResultTable.tsx  SpinningOverlay.tsx
middle/rust/: .gitignore  Cargo.toml  build.sh
middle/rust/src/: lib.rs  logic.rs  types.rs
